--- a/Resources/Styles/Styles.xaml
+++ b/Resources/Styles/Styles.xaml
@@ -137,7 +137,7 @@
     </Style>
 
     <Style TargetType="ImageButton">
-        <Setter Property="Opacity" Value="1" />
+        <Setter Property="OpaTrilogy" Value="1" />
         <Setter Property="BorderColor" Value="Transparent"/>
         <Setter Property="BorderWidth" Value="0"/>
         <Setter Property="CornerRadius" Value="0"/>
@@ -149,7 +149,7 @@
                     <VisualState x:Name="Normal" />
                     <VisualState x:Name="Disabled">
                         <VisualState.Setters>
-                            <Setter Property="Opacity" Value="0.5" />
+                            <Setter Property="OpaTrilogy" Value="0.5" />
                         </VisualState.Setters>
                     </VisualState>
                 </VisualStateGroup>
@@ -292,7 +292,7 @@
 
     <Style TargetType="Shadow">
         <Setter Property="Radius" Value="15" />
-        <Setter Property="Opacity" Value="0.5" />
+        <Setter Property="OpaTrilogy" Value="0.5" />
         <Setter Property="Brush" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource White}}" />
         <Setter Property="Offset" Value="10,10" />
     </Style>
