--- a/ViewViewModels/Movies/MoviesView.xaml
+++ b/ViewViewModels/Movies/MoviesView.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:model="clr-namespace:MyFirstMobileApp.Models.Entities"
-             x:Class="MyFirstMobileApp.ViewViewModels.Vacations.VacationView"
+             x:Class="MyFirstMobileApp.ViewViewModels.Moviess.MoviesView"
              Title="{Binding Title}">
 
     <ContentPage.Resources>
@@ -27,12 +27,12 @@
 
             <BoxView HeightRequest="2" HorizontalOptions="FillAndExpand" BackgroundColor="#000000"/>
 
-            <CollectionView x:Name="VacationGoals" ItemsSource="{Binding VacationCollection, Mode=TwoWay}"
+            <CollectionView x:Name="MoviesGoals" ItemsSource="{Binding MoviesCollection, Mode=TwoWay}"
                                     SelectionMode="None" ItemsLayout="VerticalList">
 
                 <CollectionView.ItemTemplate>
 
-                    <DataTemplate x:DataType="model:Vacation">
+                    <DataTemplate x:DataType="model:Movies">
 
                         <Grid Padding="2">
                             <Grid.ColumnDefinitions>
@@ -48,30 +48,30 @@
 
                             <!-- Left Side -->
                             <StackLayout Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
-                                <Label Text="{Binding Country, Mode=TwoWay}" FontAttributes="Bold" FontSize="Large"
+                                <Label Text="{Binding Name, Mode=TwoWay}" FontAttributes="Bold" FontSize="Large"
                                            HorizontalTextAlignment="Start" TextColor="Black" />
 
                                 <Label Text=", " FontSize="Large" />
 
-                                <Label Text="{Binding City, Mode=TwoWay}" FontAttributes="Bold" FontSize="Large" 
+                                <Label Text="{Binding Trilogy, Mode=TwoWay}" FontAttributes="Bold" FontSize="Large" 
                                            HorizontalTextAlignment="Start" TextColor="Black" />
                             </StackLayout>
 
                             <StackLayout Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
-                                <Label Text="Visited:" FontAttributes="Bold" FontSize="Large" VerticalOptions="Center" />
+                                <Label Text="Watched:" FontAttributes="Bold" FontSize="Large" VerticalOptions="Center" />
 
-                                <Switch x:Name="IsVisited" IsToggled="{Binding Visited, Mode=TwoWay}"
+                                <Switch x:Name="IsWatched" IsToggled="{Binding Watched, Mode=TwoWay}"
                                             ThumbColor="Red" OnColor="Green" VerticalOptions="Center" />
                             </StackLayout>
 
                             <!-- Right Side -->
                             <StackLayout Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Orientation="Vertical" HorizontalOptions="End">
                                 <Button Text="Update"
-                                             Command="{Binding Path=BindingContext.UpdateCommand, Source={x:Reference VacationGoals}, Mode=TwoWay}"
+                                             Command="{Binding Path=BindingContext.UpdateCommand, Source={x:Reference MoviesGoals}, Mode=TwoWay}"
                                              CommandParameter="{Binding .}" TextTransform="None" BackgroundColor="Blue" TextColor="White" FontAttributes="Bold,Italic" />
 
                                 <Button Text="Delete"
-                                             Command="{Binding Path=BindingContext.DeleteCommand, Source={x:Reference VacationGoals}, Mode=TwoWay}"
+                                             Command="{Binding Path=BindingContext.DeleteCommand, Source={x:Reference MoviesGoals}, Mode=TwoWay}"
                                              CommandParameter="{Binding .}" TextTransform="None" BackgroundColor="Red" TextColor="White" FontAttributes="Bold,Italic" />
                             </StackLayout>
 
