--- a/ViewViewModels/ControlsCollection/SliderControl/SliderView.xaml
+++ b/ViewViewModels/ControlsCollection/SliderControl/SliderView.xaml
@@ -8,7 +8,7 @@
     <StackLayout>
 
         <BoxView Color="Red"
-                 OpaTrilogy="{Binding Value, Source={x:Reference slider}}"
+                 Opacity="{Binding Value, Source={x:Reference slider}}"
                  HeightRequest="25"
                  HorizontalOptions="CenterAndExpand" />
 
