--- a/ViewViewModels/MovieSQL/MoviesMgmtView.xaml
+++ b/ViewViewModels/MovieSQL/MoviesMgmtView.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstMobileApp.ViewViewModels.Movies.MoviesMgmtView"
+             x:Class="MyFirstMobileApp.ViewViewModels.MovieSQL.MoviesMgmtView"
              Title="{Binding Title}">
 
     <!-- Applying a "Style" to the buttons. This will provide space between the buttons -->
